--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ fabric.properties
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# virtual machine crash logs, see kouch.http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 ### Linux ###
